log
Tue 21 Mar 2023 03:48:04 PM UTC: 
 list.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  0|6
total_score: 0/70
0a93afa
Tue 21 Mar 2023 03:57:23 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
c7cacca
Tue 21 Mar 2023 03:57:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ca2e316
Tue 21 Mar 2023 04:16:35 PM UTC: 
 list.c | 17 ++++++++++-------
 1 file changed, 10 insertions(+), 7 deletions(-)
 tests:  2|5
total_score: 15/70
bfc8de1
Tue 21 Mar 2023 04:17:23 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
c26263a
Tue 21 Mar 2023 04:18:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9fb1604
Tue 21 Mar 2023 04:23:35 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
114ece0
Tue 21 Mar 2023 04:24:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5b13495
Tue 21 Mar 2023 04:25:09 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
06c1e00
Tue 21 Mar 2023 04:26:18 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
723f7b4
Tue 21 Mar 2023 04:26:58 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
63bc5ec
Tue 21 Mar 2023 04:27:26 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
c1162b1
Tue 21 Mar 2023 05:34:15 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
760ecb0
Tue 21 Mar 2023 05:34:35 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
7e8f8ee
Tue 21 Mar 2023 05:36:23 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
f410c35
Tue 21 Mar 2023 05:41:21 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
0248a7b
Tue 21 Mar 2023 05:41:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
b4f8f45
Tue 21 Mar 2023 05:44:23 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
55e87f5
Tue 21 Mar 2023 06:06:53 PM UTC: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:78:22: error: ‘Node’ has no member named ‘dato’; did you mean ‘data’?
   78 |   return nuevo_nodo->dato;
      |                      ^~~~
      |                      data
list.c:78:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   78 |   return nuevo_nodo->dato;
      |          ^~~~~~~~~~
list.c:67:6: note: declared here
   67 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
640ecac
Tue 21 Mar 2023 06:08:39 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:78:20: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   78 |   return nuevo_nodo->data;
      |          ~~~~~~~~~~^~~~~~
list.c:67:6: note: declared here
   67 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7b40bc0
Tue 21 Mar 2023 06:09:12 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4940c1b
Tue 21 Mar 2023 06:14:15 PM UTC: 
 list.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  9|3
total_score: 35/70
8c99256
Tue 21 Mar 2023 06:15:28 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:75:15: error: ‘Node’ has no member named ‘head’
   75 |     nuevo_nodo->head = list->head;
      |               ^~
Compilation failed
8db05e0
Tue 21 Mar 2023 06:15:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
f2efaf0
Tue 21 Mar 2023 06:20:47 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
c7ab5e2
Tue 21 Mar 2023 06:21:01 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
e6db08e
Tue 21 Mar 2023 06:21:15 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
df83544
Tue 21 Mar 2023 06:22:46 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
d1dcf12
Tue 21 Mar 2023 06:28:01 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
f43d795
Tue 21 Mar 2023 06:37:53 PM UTC: 
 list.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
041032b
Wed 22 Mar 2023 01:24:47 PM UTC: 
 list.c | 19 +++++++++++++------
 1 file changed, 13 insertions(+), 6 deletions(-)
 tests:  10|2
total_score: 45/70
6d0d6c4
Wed 22 Mar 2023 01:27:14 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
d8da7bd
Wed 22 Mar 2023 01:28:34 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
2267744
Wed 22 Mar 2023 01:29:47 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  11|1
total_score: 55/70
93c4df8
Wed 22 Mar 2023 01:30:07 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:104:21: error: expected identifier before ‘=’ token
  104 |     list->current-> = nuevo_nodo;
      |                     ^
Compilation failed
e88e808
